--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>Iffy</h1>
-        <img scr = "https://picsum.photos/id/343/200/300" alt = "image displayed because not github pages">
+        <img src = "https://picsum.photos/id/343/200/300" alt = "image displayed because not github pages">
     </main>
 </body>
 </html>
