--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <h1>Iffy</h1>
         <script>
-            console.log('heelo')
+            console.log('hello')
             console.log(window.location)
             console.log(window.location.host)
             const onGithub = window.location.host.includes('github.io')
